package cz.cvut.fel.pjv.arimaa.ui;

import javafx.application.Application;
import javafx.stage.Stage;

/**
 * JavaFX application entry; scene graph and controllers will be added later.
 */
public class JavafxApp extends Application {

    @Override
    public void start(Stage primaryStage) {
    }
}
